fix: layout shift due to empty scrollbar

--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -1,6 +1,5 @@
 .root {
   position: sticky;
-  width: 100%;
   top: 0px;
   z-index: 30;
 }
