--- a/components/ui/Sider/Sider.module.css
+++ b/components/ui/Sider/Sider.module.css
@@ -5,7 +5,6 @@
   z-index: 31;
   backdrop-filter: blur(0.8px);
   background-color: rgba(0, 0, 0, 0.2);
-  overflow-y: auto;
 }
 
 .sider {
